--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Mou67</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <p>test</p>
-    <p>test</p>
-    <p>test</p>
+    <div class="background-container">
+        <iframe src='https://my.spline.design/vaporwavebackground-c039798a5584b7e7bac18625f5ce222e/' frameborder='0' width='110%' height='110%'></iframe>
+    </div>
+    
+    <main>
+        <div class="card">
+            <h2>About Me</h2>
+            <p>Hi, I'm Mou67</p>
+            <p>Im a Hobby Code explorer</p>
+            <p>I love to code and learn new things</p>
+            <p>Always learning and exploring new technologies</p>
+            <div class="hidden-text">
+                <p class="typewriter">Welcome to my interactive card!</p>
+                <p class="typewriter">Explore my projects and skills.</p>
+                <p class="typewriter">Im a Freelancer and i dont work for people</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
