--- a/index.html
+++ b/index.html
@@ -13,17 +13,49 @@
         <iframe src='https://my.spline.design/vaporwavebackground-c039798a5584b7e7bac18625f5ce222e/' frameborder='0' width='110%' height='110%'></iframe>
     </div>
     
+    <div class="music-card">
+        <div class="music-icon">🎵</div>
+        <div class="music-controls">
+            <h2>Background Music</h2>
+            <audio id="background-music" src="asset/music/Softcore.mp3" autoplay loop></audio>
+            <div class="control-buttons">
+                <button id="play-pause">▶️</button>
+                <button id="stop">⏹️</button>
+            </div>
+            <input type="range" id="volume" min="0" max="1" step="0.1" value="1">
+            <div class="progress-bar">
+                <div id="progress"></div>
+            </div>
+            <p class="music-status">Music is paused</p>
+        </div>
+    </div>
+    
     <main>
-        <div class="card">
-            <h2>About Me</h2>
-            <p>Hi, I'm Mou67</p>
-            <p>Im a Hobby Code explorer</p>
-            <p>I love to code and learn new things</p>
-            <p>Always learning and exploring new technologies</p>
-            <div class="hidden-text">
-                <p class="typewriter">Welcome to my interactive card!</p>
-                <p class="typewriter">Explore my projects and skills.</p>
-                <p class="typewriter">Im a Freelancer and i dont work for people</p>
+        <div class="card-container">
+            <div class="card">
+                <h2>What im currently learning</h2>
+                <p>im currently learning</p>
+                <p>Https, css, javascript</p>
+                <p>Python, C++</p>
+                <p>and some not legal stuff</p>
+                <div class="hidden-text">
+                    <p class="typewriter">Welcome to my interactive card!</p>
+                    <p class="typewriter">Explore my projects and skills.</p>
+                    <p class="typewriter">Im a Freelancer and i dont work for people</p>
+                </div>
+            </div>
+            <div class="card">
+                <h2>About me</h2>
+                <p>Hi im Mou67</p>
+                <p>My Hobbys: Coding, Gaming, Anime, Chilling</p>
+                <p>I dont think that my age is important for you</p>
+                <p>I like coding and like to learn new things</p>
+                <p>im a freelancer and i only work (make things) for myself or my friends</p>
+                <div class="hidden-text">
+                    <p class="typewriter">Check out my projects!</p>
+                    <p class="typewriter">Always eager to learn more.</p>
+                    <p class="typewriter">¯\_(ツ)_/¯</p>
+                </div>
             </div>
         </div>
     </main>
