--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="card">
                 <h2>What im currently learning</h2>
                 <p>im currently learning</p>
-                <p>Https, css, javascript</p>
+                <p>Html, css, javascript</p>
                 <p>Python, C++</p>
                 <p>and some not legal stuff</p>
                 <div class="hidden-text">
