--- a/index.html
+++ b/index.html
@@ -3,78 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mou67</title>
-    <link rel="icon" type="image/x-icon" href="asset/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FFD2JBPYD4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-FFD2JBPYD4');
-    </script>
+    <title>Mou67</title>
 </head>
 <body>
     <div class="background-container">
-        <iframe src='https://my.spline.design/vaporwavebackground-c039798a5584b7e7bac18625f5ce222e/' frameborder='0' width='110%' height='110%'></iframe>
-    </div>
-    
-    <div class="music-card">
-        <img id="album-art" src="asset/images/softcore.jpg" alt="Album Art">
-        <div class="music-info">
-            <h2>ASTRO</h2>
-            <p>Slowboy, IVOXYGEN, zaichkou888</p>
+        <div class="logo-container">
+            <span class="logo-text">Mou</span>
         </div>
-        <div class="timeline">
-            <div class="progress-bar">
-                <div id="progress"></div>
-            </div>
-            <div class="time-info">
-                <span id="current-time">0:00</span>
-                <span id="duration">0:00</span>
-            </div>
-        </div>
-        <div class="music-controls">
-            <button id="previous"><img src="asset/images/last_song.png" alt="Previous"></button>
-            <button id="play-pause"><img src="asset/images/play.png" alt="Play/Pause"></button>
-            <button id="next-track"><img src="asset/images/next_song.png" alt="Next"></button>
+        <video autoplay muted loop id="myVideo">
+            <source src="../videos/video 1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="content">
+            <h1>Website is under construction</h1>
+            <p class="secondary-text">Please be patient</p>
         </div>
     </div>
-
-    <!-- Add the audio element -->
-    <audio id="background-music" src="asset/music/Softcore.mp3"></audio>
-    
-    <main>
-        <div class="card-container">
-            <div class="card" id="learning-card">
-                <h2>What im currently learning</h2>
-                <p>im currently learning</p>
-                <p>Html, css, javascript</p>
-                <p>Python, C++</p>
-                <p>and some not legal stuff</p>
-                <div class="hidden-text">
-                    <p class="typewriter">Welcome to my interactive card!</p>
-                    <p class="typewriter">Explore my projects and skills.</p>
-                    <p class="typewriter">Im a Freelancer and i dont work for people</p>
-                </div>
-            </div>
-            <div class="card" id="about-me-card">
-                <h2>About me</h2>
-                <p>Hi im Mou67</p>
-                <p>My Hobbys: Coding, Gaming, Anime, Chilling</p>
-                <p>I dont think that my age is important for you</p>
-                <p>I like coding and like to learn new things</p>
-                <div class="hidden-text">
-                    <p class="typewriter">Check out my projects!</p>
-                    <p class="typewriter">Always eager to learn more.</p>
-                    <p class="typewriter">¯\_(ツ)_/¯</p>
-                </div>
-            </div>
-        </div>
-    </main>
 </body>
 </html>
