--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="background-container">
         <div class="logo-container">
-            <span class="logo-text">Mou</span>
+            <img src="../assets/Mou.png" alt="Mou Logo" class="logo-image">
         </div>
         <video autoplay muted loop id="myVideo">
             <source src="../videos/video 1.mp4" type="video/mp4">
