--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <div class="logo-container">
             <img src="../assets/Mou.png" alt="Mou Logo" class="logo-image">
         </div>
+        <div class="visitor-counter">
+            <div class="eye">
+                <div class="eye-ball"></div>
+            </div>
+            <div class="visitor-count">
+                <span id="counter">0</span>
+                <span class="counter-text">visitors</span>
+            </div>
+        </div>
         <video autoplay muted loop id="myVideo">
             <source src="../videos/video 1.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -22,5 +31,6 @@
             <p class="secondary-text">Please be patient</p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
