--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Mou67</title>
@@ -12,6 +12,39 @@
     <div class="background-container">
         <div class="logo-container">
             <img src="../assets/Mou.png" alt="Mou Logo" class="logo-image">
+        </div>
+        <video autoplay muted loop id="myVideo">
+            <source src="../videos/video 4.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="content">
+            <h1>Hi, I'm Mou</h1>
+            <div class="intro-section">
+                <p>Welcome to my personal website</p>
+            </div>
+            <div class="about-section">
+                <h2>About Me</h2>
+                <p>I'm just a guy that likes programming, anime, gaming and learning new things.</p>
+                <p>Nice to meet you, perhaps we can create somrthing together.</p>
+            </div>
+            <div class="skills-section">
+                <h2>My Skills</h2>
+                <div class="skills-grid">
+                    <div class="skill-item">HTML</div>
+                    <div class="skill-item">CSS</div>
+                    <div class="skill-item">JavaScript</div>
+                    <div class="skill-item">Python</div>
+                </div>
+            </div>
+            <div class="contact-section">
+                <h2>Get in Touch</h2>
+                <div class="social-links">
+                    <a href="https://github.com/Mou67" target="_blank" rel="noopener" class="social-link">GitHub</a>
+                    <a href="https://aideon.gitbook.io/aideon" target="_blank" rel="noopener" class="social-link">
+                        Discord Bot
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="visitor-counter">
             <div class="eye">
@@ -22,15 +55,7 @@
                 <span class="counter-text">visitors</span>
             </div>
         </div>
-        <video autoplay muted loop id="myVideo">
-            <source src="../videos/video 1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class="content">
-            <h1>Website is under construction</h1>
-            <p class="secondary-text">Please be patient</p>
-        </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
