--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Mou67 | Developer & Creative</title>
+    <title>M̷̗̰͇̪͐̏̾̆͌̈́͒͜͝ͅȍ̵̙̽ȕ̴͇͎͙̬̰̥̫̘͂̋̀̄͑ͅ6̷̨̨̛̥̩͈̞̗͎̓̊͊ͅ7̶̢̛̈́̉̆͗̕</title>
 </head>
 <body>
     <div class="background-container">
