--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                        aria-label="Visit my Aideon documentation">
                         Aideon Docs
                     </a>
+                    <a href="discord.html" class="social-link discord-btn">My Discord Profile</a>
                 </div>
             </section>
         </main>
