--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
             <a href="#home" class="nav-link">Start</a>
             <a href="#about" class="nav-link">Über mich</a>
             <a href="#skills" class="nav-link">Fähigkeiten</a>
-            <a href="#projects" class="nav-link">Projekte</a>
-            <a href="#contact" class="nav-link">Kontakt</a>
         </div>
         <div class="menu-toggle">
             <div class="bar"></div>
@@ -40,7 +38,7 @@
                 <p class="description">Ich gestalte moderne, interaktive und benutzerfreundliche Weberlebnisse</p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary-btn">Meine Arbeiten <i class="fas fa-arrow-right"></i></a>
-                    <a href="#contact" class="btn secondary-btn">Kontakt <i class="fas fa-envelope"></i></a>
+                    <a href="#contact" class="btn secondary-btn">Du willst mich Kontaktieren <i class="fas fa-envelope"></i></a>
                 </div>
             </div>
             <div class="hero-image">
