--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Portfolio Website</h3>
-                    <p>Eine moderne, responsive Portfolio-Website mit interaktiven Animationen und glassmorphem Design.</p>
+                    <h3>In Work</h3>
+                    <p>Fivem Lua Scripts with my own framework and core system</p>
                     <div class="project-tech">
                         <span class="tech-tag">HTML5</span>
                         <span class="tech-tag">CSS3</span>
                         <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">GSAP</span>
+                        <span class="tech-tag">LUA</span>
                     </div>
                 </div>
                 <div class="project-preview">
@@ -264,13 +264,13 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>E-Commerce Dashboard</h3>
-                    <p>Ein interaktives Dashboard für E-Commerce mit Datenvisualisierung und benutzerfreundlicher Oberfläche.</p>
+                    <h3>In Work</h3>
+                    <p>. . .</p>
                     <div class="project-tech">
-                        <span class="tech-tag">React</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">Chart.js</span>
-                        <span class="tech-tag">API</span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
                     </div>
                 </div>
                 <div class="project-preview">
@@ -293,13 +293,13 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Weather App</h3>
-                    <p>Eine elegante Wetter-App mit Live-Daten, Standortsuche und animierten Wettersymbolen.</p>
+                    <h3>In Work</h3>
+                    <p>. . .</p>
                     <div class="project-tech">
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">Weather API</span>
-                        <span class="tech-tag">Geolocation</span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
                     </div>
                 </div>
                 <div class="project-preview">
@@ -322,13 +322,13 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Task Manager</h3>
-                    <p>Ein intuitiver Task Manager mit Drag & Drop, Kategorien und lokaler Speicherung.</p>
+                    <h3>In Work</h3>
+                    <p>. . .</p>
                     <div class="project-tech">
-                        <span class="tech-tag">HTML5</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">LocalStorage</span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
                     </div>
                 </div>
                 <div class="project-preview">
@@ -351,13 +351,13 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Restaurant Website</h3>
-                    <p>Eine elegante Restaurant-Website mit Speisekarte, Reservierungen und animierten Elementen.</p>
+                    <h3>In Work</h3>
+                    <p>. . .</p>
                     <div class="project-tech">
-                        <span class="tech-tag">HTML5</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">Bootstrap</span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
                     </div>
                 </div>
                 <div class="project-preview">
@@ -380,13 +380,13 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Music Player</h3>
-                    <p>Ein stilvoller Music Player mit Playlist-Verwaltung, Equalizer und modernem Design.</p>
+                    <h3>In Work</h3>
+                    <p>. . .</p>
                     <div class="project-tech">
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">CSS3</span>
-                        <span class="tech-tag">HTML5 Audio</span>
-                        <span class="tech-tag">Web APIs</span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
+                        <span class="tech-tag"></span>
                     </div>
                 </div>
                 <div class="project-preview">
