Add Open Graph meta tags for Discord embed
Introduced Open Graph meta tags to index.html to improve link previews on Discord and other platforms. This enhances sharing by providing a title, description, image, URL, and type for the website.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <!-- Open Graph Meta Tags for Discord Embed -->
+    <meta property="og:title" content="Mou67 - Web Developer & Designer" />
+    <meta property="og:description" content="Modern, interactive, and user-friendly web experiences by Mou67." />
+    <meta property="og:image" content="https://mou67.com/assets/images/profile.png" />
+    <meta property="og:url" content="https://mou67.com/" />
+    <meta property="og:type" content="website" />
 </head>
 <body>
     <div class="cursor"></div>
