Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -229,30 +229,29 @@
         <div class="projects-container">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="assets/images/project1.jpg" alt="Project 1" loading="lazy">
+                    <img src="assets/images/user_finder.png" alt="Project 1" loading="lazy">
                     <div class="project-overlay">
                         <div class="project-buttons">
-                            <a href="#" class="project-btn" target="_blank">
+                            <a href="https://mou67.github.io/userfinder/" class="project-btn" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
-                            <a href="#" class="project-btn" target="_blank">
+                            <a href="https://github.com/Mou67/userfinder" class="project-btn" target="_blank">
                                 <i class="fab fa-github"></i> Code
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>In Progress</h3>
-                    <p>Fivem Lua Scripts with my own framework and core system</p>
+                    <h3>User Finder</h3>
+                    <p>A professional Open Source Intelligence (OSINT) tool for searching usernames and profiles across the internet.</p>
                     <div class="project-tech">
                         <span class="tech-tag">HTML5</span>
                         <span class="tech-tag">CSS3</span>
                         <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">LUA</span>
                     </div>
                 </div>
                 <div class="project-preview">
-                    <img src="assets/images/project1-preview.jpg" alt="Portfolio Website Preview">
+                    <img src="assets/images/user_finder.png" alt="Portfolio Website Preview">
                 </div>
             </div>
 
