--- a/index.html
+++ b/index.html
@@ -257,26 +257,22 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="assets/images/project2.jpg" alt="Project 2" loading="lazy">
+                    <img src="assets/images/logger.png" alt="Project 1" loading="lazy">
                     <div class="project-overlay">
                         <div class="project-buttons">
-                            <a href="#" class="project-btn" target="_blank">
+                            <a href="https://mou67.github.io/website_test/" class="project-btn" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
-                            <a href="#" class="project-btn" target="_blank">
-                                <i class="fab fa-github"></i> Code
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>In Progress</h3>
-                    <p>. . .</p>
+                    <h3>Just some shit i tested</h3>
+                    <p>just an website where google logs all you data welcome to the internet</p>
                     <div class="project-tech">
-                        <span class="tech-tag"></span>
-                        <span class="tech-tag"></span>
-                        <span class="tech-tag"></span>
-                        <span class="tech-tag"></span>
+                        <span class="tech-tag">HTML5</span>
+                        <span class="tech-tag">CSS3</span>
+                        <span class="tech-tag">JavaScript</span>
                     </div>
                 </div>
                 <div class="project-preview">
