Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -282,26 +282,22 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="assets/images/project3.jpg" alt="Project 3" loading="lazy">
+                    <img src="assets/images/old_website.png" alt="Project 3" loading="lazy">
                     <div class="project-overlay">
                         <div class="project-buttons">
-                            <a href="#" class="project-btn" target="_blank">
+                            <a href="https://mou67.github.io/odl_website/" class="project-btn" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
-                            </a>
-                            <a href="#" class="project-btn" target="_blank">
-                                <i class="fab fa-github"></i> Code
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>In Progress</h3>
-                    <p>. . .</p>
+                    <h3>my old website</h3>
+                    <p>i dont know what to say more then it was a pain to make this in my time</p>
                     <div class="project-tech">
-                        <span class="tech-tag"></span>
-                        <span class="tech-tag"></span>
-                        <span class="tech-tag"></span>
-                        <span class="tech-tag"></span>
+                        <span class="tech-tag">HTML5</span>
+                        <span class="tech-tag">CSS3</span>
+                        <span class="tech-tag">JavaScript</span>
                     </div>
                 </div>
                 <div class="project-preview">
